--- a/Yelp/SwitchCell.xib
+++ b/Yelp/SwitchCell.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -21,7 +20,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SVs-nC-2mo">
-                        <rect key="frame" x="261" y="8" width="51" height="31"/>
+                        <rect key="frame" x="171" y="8" width="51" height="31"/>
                         <connections>
                             <action selector="switchValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="mxF-tj-00Y"/>
                         </connections>
@@ -29,9 +28,17 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="SVs-nC-2mo" secondAttribute="trailing" constant="10" id="9Fg-E9-ULg"/>
+                    <constraint firstAttribute="trailing" secondItem="SVs-nC-2mo" secondAttribute="trailing" constant="100" id="C6w-Kd-GlM"/>
                     <constraint firstAttribute="bottom" secondItem="SVs-nC-2mo" secondAttribute="bottom" constant="4.5" id="Hlj-r9-zja"/>
+                    <constraint firstAttribute="trailing" secondItem="SVs-nC-2mo" secondAttribute="trailing" constant="143" id="aFw-XF-1na"/>
                     <constraint firstItem="SVs-nC-2mo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="na3-KG-dKG"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="9Fg-E9-ULg"/>
+                        <exclude reference="aFw-XF-1na"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="titleLabel" destination="Ogh-9P-pto" id="Ngz-e4-a0h"/>
