--- a/Yelp/SwitchCell.xib
+++ b/Yelp/SwitchCell.xib
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,25 +15,28 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogh-9P-pto">
-                        <rect key="frame" x="24" y="11" width="42" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogh-9P-pto">
+                        <rect key="frame" x="8" y="11" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SVs-nC-2mo">
-                        <rect key="frame" x="171" y="8" width="51" height="31"/>
+                        <rect key="frame" x="263" y="8" width="51" height="31"/>
                         <connections>
                             <action selector="switchValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="mxF-tj-00Y"/>
                         </connections>
                     </switch>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Ogh-9P-pto" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="6LY-b9-VIj"/>
                     <constraint firstAttribute="trailing" secondItem="SVs-nC-2mo" secondAttribute="trailing" constant="10" id="9Fg-E9-ULg"/>
-                    <constraint firstAttribute="trailing" secondItem="SVs-nC-2mo" secondAttribute="trailing" constant="100" id="C6w-Kd-GlM"/>
+                    <constraint firstAttribute="trailing" secondItem="SVs-nC-2mo" secondAttribute="trailing" constant="8" id="C6w-Kd-GlM"/>
                     <constraint firstAttribute="bottom" secondItem="SVs-nC-2mo" secondAttribute="bottom" constant="4.5" id="Hlj-r9-zja"/>
+                    <constraint firstItem="Ogh-9P-pto" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="Z11-na-L6a"/>
                     <constraint firstAttribute="trailing" secondItem="SVs-nC-2mo" secondAttribute="trailing" constant="143" id="aFw-XF-1na"/>
                     <constraint firstItem="SVs-nC-2mo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="na3-KG-dKG"/>
+                    <constraint firstItem="Ogh-9P-pto" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="t9l-mk-386"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
